--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,10 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
     implementation "androidx.recyclerview:recyclerview:1.2.1"
     implementation 'android.arch.lifecycle:extensions:1.1.1'
+
+    implementation platform('com.google.firebase:firebase-bom:29.1.0')
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.firebase:firebase-messaging'
 }
+
+apply plugin: 'com.google.gms.google-services'
